crates/toml/tests/snapshots/invalid/table/array-implicit.stderr
TOML parse error at line 13, column 3
   |
13 | [[albums]]
   |   ^^^^^^
duplicate key
